# gdb-neural-visualizer

./: Cargo.toml  config.toml  run.sh
gdb-logger/: Cargo.toml
gdb-logger/src/: config.rs  debug_info.rs  main.rs
neural-visualizer/: Cargo.toml  README.md  build.sbt  index.html  package-lock.json  package.json
neural-visualizer/src/: App.tsx  Viewer.tsx  main.rs
neural-visualizer/src/main/scala/: Main.scala
neural-visualizer/src/main/scala/data/: DebugInfo.scala
neural-visualizer/src/main/scala/ui/: Edge.scala  NetworkPanel.scala  Node.scala
