[package]
name = "gdb-logger"
version = "0.1.0"
edition = "2024"

[lib]
name = "gdb_logger"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.98"
futures-util = "0.3.31"
gdbmi = "0.0.2"
nix = "0.30.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version="1.45.0", features = ["rt-multi-thread", "net"] }
toml = "0.8.22"
