[package]
name = "neural-visualizer"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.15.0"
bevy_prototype_lyon = "0.13.0"
bevy_slinet = { version = "0.13.0", features = ["client", "server", "protocol_udp", "serializer_bincode"]}
bincode = "1"
serde = { version = "1.0.219", features = ["derive"] }
