[package]
name = "neural-visualizer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bevy = "0.14.0"
bevy_prototype_lyon = "0.12.0"
bevy_simple_networking = "0.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
gdb-logger = { path = "../gdb-logger" }
